--- a/client/package.json
+++ b/client/package.json
@@ -33,9 +33,10 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "~14.7.1",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.1",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
