--- a/client/app.json
+++ b/client/app.json
@@ -51,6 +51,11 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "calo-nutrition-app-2025"
+      }
     }
   }
 }
