--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "expo-camera": "~16.1.9",
     "expo-constants": "~17.1.6",
     "expo-device": "^7.1.4",
+    "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -38,8 +39,10 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
     "expo-notifications": "^0.31.4",
+    "expo-print": "^14.1.4",
     "expo-router": "~5.1.1",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
