--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^8.4.2",
+    "@expo/cli": "^54.0.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -23,51 +24,52 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.13",
-    "expo-auth-session": "^6.2.0",
-    "expo-background-fetch": "^13.1.6",
-    "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.9",
-    "expo-constants": "~17.1.6",
-    "expo-device": "^7.1.4",
-    "expo-file-system": "^18.1.11",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
-    "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "~7.1.5",
-    "expo-notifications": "^0.31.4",
-    "expo-print": "^14.1.4",
-    "expo-router": "~5.1.1",
-    "expo-secure-store": "~14.2.3",
-    "expo-sharing": "^13.1.5",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
-    "expo-task-manager": "^13.1.6",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.2",
+    "expo-auth-session": "~7.0.8",
+    "expo-background-fetch": "~14.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-device": "~8.0.7",
+    "expo-file-system": "~19.0.12",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-print": "~15.0.7",
+    "expo-router": "~6.0.1",
+    "expo-secure-store": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.9",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "~14.0.7",
+    "expo-web-browser": "~15.0.7",
     "i18next": "^25.3.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.525.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^15.6.0",
-    "react-native": "0.79.4",
+    "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-health": "^1.19.0",
     "react-native-keychain": "^10.0.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "universal-cookie": "^8.0.1",
@@ -75,10 +77,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.10",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
