--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
